<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <!-- Title -->
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_title" />

            <!-- Details -->
            <TextView
                android:id="@+id/txtDetails"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_details" />

            <!-- Priority -->
            <TextView
                android:id="@+id/txtPriority"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_priority" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="3">

            <!-- Title -->
            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edt_title_hint"
                android:maxLength="15" />

            <!-- Details -->
            <EditText
                android:id="@+id/edtDetails"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edt_details_hint"
                android:maxLength="200" />

            <!-- Priority -->
            <RadioGroup
                android:id="@+id/rdgPriority"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- High Priority -->
                <RadioButton
                    android:id="@+id/rdbHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/high_priority"
                    android:textColor="@color/colorPriorityHigh" />

                <!-- Medium Priority -->
                <RadioButton
                    android:id="@+id/rdbMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_priority"
                    android:textColor="@color/colorPriorityMedium" />

                <!-- Low Priority -->
                <RadioButton
                    android:id="@+id/rdbLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low_priority"
                    android:textColor="@color/colorPriorityLow" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>