<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/authorDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAuthorDetails"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <!-- Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Image -->
        <ImageView
            android:id="@+id/authorImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/author_image"
            android:src="@drawable/tien_nguyen" />

        <!-- Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/author_name"
            android:textColor="@color/colorAuthorDetailsName"
            android:textStyle="bold"
            android:layout_centerInParent="true" />

        <!-- Close Icon -->
        <ImageView
            android:id="@+id/closeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/close_icon"
            android:src="@drawable/ic_close_white_24dp" />
    </RelativeLayout>

    <!-- Body -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="link1OnClick"
        android:padding="10dp"
        android:text="@string/author_link_github"
        android:textColor="@color/colorAuthorDetailsLink" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="link2OnClick"
        android:padding="10dp"
        android:text="@string/author_link_linkedin"
        android:textColor="@color/colorAuthorDetailsLink" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/authorBody1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/authorBody2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/authorBody3" />
</LinearLayout>